--- a/Practicing_Yaml_Files/service.yml
+++ b/Practicing_Yaml_Files/service.yml
@@ -1,36 +1,66 @@
-# yaml file for service type ClusterIp
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: rohank-cip-svc
-#   namespace: rohank-ns
-# spec:
-#   selector:
-#     app: rohank-app
-#   ports:
-#   - protocol: TCP
-#     port:  80
-#     targetPort:  8080
-#   type: ClusterIp
+# yaml code for service type ClusterIp
+apiVersion: v1
+kind: Service
+metadata:
+  name: rohank-cip-svc
+  namespace: rohank-ns
+spec:
+  selector:
+    app: rohank-app
+  ports:
+  - protocol: TCP
+    port:  80
+    targetPort:  8080
+  type: ClusterIp
 
 
 
-# yaml file for service type Nodeport
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: rohank-np-svc
-#   namespace: rohank-ns
-# spec:
-#   selector:
-#     app: rohank-app
-#   ports:
-#   - protocol: TCP
-#     port: 80
-#     targetPort: 8080
-#     nodePort: 32051
-#   type: Nodeport
+# yaml code for service type Nodeport
+apiVersion: v1
+kind: Service
+metadata:
+  name: rohank-np-svc
+  namespace: rohank-ns
+spec:
+  selector:
+    app: rohank-app
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+    nodePort: 32051
+  type: Nodeport
 
 
 
-#
+# yaml code for service type LoadBalancer
+apiVersion: v1
+kind: Service
+metadata:
+  name: rohank-lb-svc
+  namespace: rohank-ns
+spec:
+  selector:
+    app: rohank-app
+  ports: 
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+  type: LoadBalancer
+
+
+
+# yaml code for service type ExternalName
+apiVersion: v1
+kind: Service
+metadata:
+  name: rohank-en-svc
+  namespace: rohank-ns
+spec:
+  selector:
+    app: ipl
+  ports:
+  - protocol: TCP
+    port: 80
+    externalName: flipkart.com, amazon.com
+  type: ExternalName
