--- a/Practicing_Yaml_Files/service.yml
+++ b/Practicing_Yaml_Files/service.yml
@@ -58,9 +58,10 @@ metadata:
   namespace: rohank-ns
 spec:
   selector:
-    app: ipl
+    app: rohank-app
   ports:
   - protocol: TCP
     port: 80
     externalName: flipkart.com, amazon.com
   type: ExternalName
+
